fix home page align items in center

--- a/src/Components/HomePage/HomePage.module.css
+++ b/src/Components/HomePage/HomePage.module.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 .home {
@@ -13,7 +13,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  height: calc(100% - 100px);
+  margin-top: 100px;
 }
 
 .info-container {
@@ -90,7 +91,6 @@
     flex-direction: column;
     justify-content: center;
     width: 80vw;
-    padding-top: 150px;
   }
 
   .info-container {
